Issue: Checkout Header Gap - Mobile (#443)

--- a/packages/reference/client/scss/50_objects/_o-header.scss
+++ b/packages/reference/client/scss/50_objects/_o-header.scss
@@ -75,6 +75,7 @@
 
   &--checkout {
     position: fixed;
+    top: 0;
     background: white;
     width: 100%;
     z-index: 99;
