--- a/packages/reference/client/scss/60_components/_c-step-indicators.scss
+++ b/packages/reference/client/scss/60_components/_c-step-indicators.scss
@@ -28,12 +28,11 @@
       &__line {
         &--completed {
           display: flex;
-          position: static;
+          position: relative;
           margin-top: -$global-spacing-unit;
           margin-left: $global-spacing-unit;
           margin-bottom: $global-spacing-unit;
           width: 100%;
-          z-index: -999;
           border: 1px solid $background-positive;
 
           @include breakpoint(desktop) {
@@ -52,6 +51,7 @@
         line-height: 45px;
         border-radius: 50%;
         background-color: $checkout-grey;
+        z-index: $nav-z-index;
 
         &--active {
           background-color: $background-positive;
